# coding_architecture_fs26

./: .gitignore  README.md  _config.yml  pyproject.toml
.github/workflows/: deploy.yml
_static/assets/css/: style.scss
_static/layouts/: default.html
assignments/A00-compas-timber/: README.md  a00_compas-timber_starting_point.ghx  a00_timber_model.py
assignments/A01-mesh-brep-rf/: README.md  a01_brep-mesher.ghx  a01_mesher.py  a01_rf_system.py  a01_timber_model.py  example-01-basic-rf-systems.ghx  example-02-visualizer-components.ghx
assignments/A02-mesh-relax-rf/: README.md  a02_mesh-relax.ghx  a02_mesh_relax.py  a02_mesher.py  a02_mesher_solved.py  a02_modifiers.py  a02_rf_system.py  a02_timber_model.py  a02_timber_model_solved.py
getting-started/: README.md
lectures/week-01/: README.md
lectures/week-01/examples/: 01_compas_timber_examples.ghx
lectures/week-02/: README.md
lectures/week-03/: README.md
lectures/week-03/examples/: example-01-eccentricity.ghx  example-02-relaxation.ghx  example-03-relax-visualisation.ghx  example_02.py
lectures/week-04/: README.md
lectures/week-04/examples/: example-01-attractors.ghx  example-02-attractor-modifiers.ghx  example-03-relax-visualisation.ghx  example-04-modifiers.ghx  example_02.py  example_04.py
roadmap/: README.md
